fix(bundle size): avoid word break in values

--- a/src/app/bundle-size/bundle-size.component.css
+++ b/src/app/bundle-size/bundle-size.component.css
@@ -8,5 +8,5 @@
 }
 
 .size-stat_value {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
